--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Web Developer</h1>
+                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Software Developer</h1>
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
@@ -76,7 +76,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'm Caleb </h2>
-                        <p class="about__text">Hi there! I'm Caleb, an aspiring web developer passionate about creating beautiful and functional websites. My journey began with curiosity about how websites work and evolved into a dedicated pursuit. I enjoy working with HTML, CSS, and JavaScript to build user-friendly experiences and continuously learn new technologies. Currently, I'm pursuing an MSc in Computer Science at Anna University, where I blend theoretical knowledge with practical skills. I'm motivated to collaborate with like-minded professionals and develop innovative web applications that exceed user expectations. Let's connect and create something amazing together!</p>           
+                        <p class="about__text">Hi there! I'm Caleb, an aspiring Software developer passionate about creating beautiful and functional websites and softwares. My journey began with curiosity about how websites and applications work and evolved into a dedicated pursuit. I enjoy working with HTML, CSS, and JavaScript frameworks to build user-friendly experiences and continuously learn new technologies. Currently, I'm pursuing an MSc in Computer Science at Anna University, where I blend theoretical knowledge with practical skills. I'm motivated to collaborate with like-minded professionals and develop innovative Software web apps that exceed user expectations. Let's connect and create something amazing together!</p>           
                     </div>                                   
                 </div>
             </section>
@@ -89,7 +89,7 @@
     <div class="skills__container bd-grid">          
         <div>
             <h2 class="skills__subtitle">Professional Skills</h2>
-            <p class="skills__text">Experienced in React.js for building interactive and responsive web applications. Proficient in JavaScript (ES6+), HTML, and CSS for frontend development. Familiar with state management using React Hooks and component lifecycle. Passionate about creating seamless user experiences and collaborating in Agile teams using Git for version control.</p>
+            <p class="skills__text">Experienced in React.js for building interactive and responsive web applications. Proficient in JavaScript (ES6+), HTML, CSS for frontend development and node.js , express for backend developments. Familiar with state management using React Hooks and component lifecycle. Passionate about creating seamless user experiences and collaborating in Agile teams using Git for version control.</p>
             <div class="skills__data">
                 <div class="skills__names">
                     <i class='bx bxl-html5 skills__icon'></i>
