--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        <li class="nav__item"><a href="https://drive.google.com/file/d/15p6Euvpv_aJm-4AmKUAb8CLnN49tNYqs/view?usp=drivesdk" class="nav__link">Resume</a></li>
+                        <li class="nav__item"><a href="https://drive.google.com/file/d/16s8ZTnzWhqALt2uAs_DXr9vWoD_xmFrq/view?usp=drivesdk" class="nav__link">Resume</a></li>
                     </ul>
                 </div>
 
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Software Developer</h1>
+                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Software Developer with UI/UX Expertise</h1>
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
