--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Software Developer <br> with UI/UX Expertise</h1>
+                    <h1 class="home__title">Hello World,<br>I'm <span class="home__title-color">Caleb </span><br> Software Developer | <br> UI/UX Expertise</h1>
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
